[gd_scene load_steps=4 format=3 uid="uid://c3tsu36j60qff"]

[ext_resource type="Script" path="res://scenes/ui/leaderboard/Leaderboard.gd" id="1_l0phv"]
[ext_resource type="PackedScene" uid="uid://dno4lcxs0na3i" path="res://scenes/ui/leaderboard/leaderboard_entry.tscn" id="2_t5xgc"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iuwtv"]
color = Color(0.8, 0.8, 0.8, 1)
thickness = 2

[node name="Leaderboard" type="VBoxContainer"]
script = ExtResource("1_l0phv")
id = "cannon"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FakeButtonForCenteringTheLabel" type="Button" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Reset"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Leaderboard
"
horizontal_alignment = 1

[node name="ButtonReset" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_iuwtv")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaderboardEntries" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeaderboardEntry" parent="ScrollContainer/LeaderboardEntries" instance=ExtResource("2_t5xgc")]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/ButtonReset" to="." method="_on_button_reset_pressed"]
